# pos_rust

./: .env  .gitignore  Cargo.toml  refactoring_summary.txt
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
src/: main.rs
src/auth/: auth_handler.rs  auth_service.rs  mod.rs
src/entities/: categories.rs  customers.rs  employees.rs  inventory.rs  mod.rs  order_items.rs  orders.rs  password_reset_tokens.rs  payments.rs  permissions.rs  prelude.rs  products.rs  promotions.rs  purchase_order_items.rs  purchase_orders.rs  refund_items.rs  refunds.rs  role_permissions.rs  roles.rs  settings.rs  settings_model.rs  stores.rs  suppliers.rs
src/extractor/: claims_extractor.rs  mod.rs  store_employee_claims_extractor.rs
src/guard/: employee_guard.rs  inventory_guard.rs  mod.rs  order_guard.rs  order_item_guard.rs  payment_guard.rs  product_guard.rs  role_guard.rs  store_guard.rs
src/handler/: bills_handler.rs  categories_handler.rs  customers_handler.rs  dashboard_handler.rs  employees_handler.rs  inventory_handler.rs  mod.rs  order_items_handler.rs  orders_handler.rs  payments_handler.rs  products_handler.rs  promotions_handler.rs  purchase_orders_handler.rs  refunds_handler.rs  reports_handler.rs  (+5 more)
src/migration/: Cargo.toml  m20250918_024324_create_table.rs  m20250922_190000_create_refund_tables.rs  m20250922_210000_create_promotions.rs  m20250925_022138_seed_owner_and_store.rs  m20250926_180000_create_purchase_orders.rs  m20250927_120000_create_roles_table.rs  m20250927_120005_create_permissions_table.rs  m20250927_120010_create_role_permissions_table.rs  m20250927_120015_alter_employees_add_role_id.rs  m20250927_120020_seed_default_roles_permissions.rs  m20250927_130000_create_categories_table.rs  m20250927_130000_create_initial_schema.rs  m20250927_130005_create_customers_table.rs  m20250927_130010_create_employees_table.rs  m20250927_130015_create_stores_table.rs  m20250927_130020_create_suppliers_table.rs  m20250927_130025_create_products_table.rs  m20250927_130030_create_inventory_table.rs  m20250927_130035_create_orders_table.rs  m20250927_130040_create_order_items_table.rs  m20250927_130045_create_payments_table.rs  m20250927_130050_create_promotions_table.rs  m20250927_130055_create_purchase_orders_table.rs  m20250927_130100_create_purchase_order_items_table.rs  m20250927_130105_create_refunds_table.rs  m20250927_130110_create_refund_items_table.rs  m20250927_130115_create_foreign_keys.rs  m20250927_130120_seed_main_store.rs  m20250927_140000_seed_owner_admin_accounts.rs  m20250929_100000_add_photo_url_to_products.rs  m20250929_100005_add_photo_url_to_employees.rs  m20250930_100000_add_expires_at_to_products.rs  m20251001_100000_create_settings_table.rs  m20251001_150000_create_password_reset_tokens_table.rs  mod.rs
(+145 files in other folders)
