[package]
name = "webservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
argon2 = "0.5.3"
chrono = "0.4.42"
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
password-hash = "0.5.0"

sea-orm = { version = "1.1.16", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
sea-orm-migration = { version = "1.1.16", features = ["sqlx-mysql", "runtime-tokio-native-tls"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
