[package]
name = "webservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-cors = "0.7.0"
actix-files = "0.6.7"
actix-web = "4.11.0"
actix-multipart = "0.6.0"
actix-web-actors = "4.3.1"
actix-ws = "0.2.5"
argon2 = "0.5.3"
chrono = "0.4.42"
dotenvy = "0.15.7"
env_logger = "0.10"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
lazy_static = "1.4.0"
log = "0.4"
password-hash = "0.5.0"
image = "0.24.9"
uuid = { version = "1.8.0", features = ["v4"] }
webp = "0.2.1"
rand = "0.8.5"

sea-orm = { version = "1.1.16", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
sea-orm-migration = { version = "1.1.16", features = ["sqlx-mysql", "runtime-tokio-native-tls"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
lettre = { version = "0.11.18", features = ["smtp-transport", "tokio1", "tokio1-native-tls"] }
lettre_email = "0.9.4"
tokio-native-tls = "0.3.1"
native-tls = "0.2"
