[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration"
path = "./mod.rs"

[dependencies]
sea-orm = { version = "1.1.6", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
sea-orm-migration = { version = "1.1.16", features = [ "sqlx-mysql", "runtime-tokio-native-tls" ] }
tokio = { version = "1.47.1", features = ["full"] }
